# libjvm

./: .gitignore  Cargo.toml
jvm/: Cargo.toml
libjvm/: Cargo.toml
libjvm/src/common/: Cargo.toml
libjvm/src/common/src/: invocation.rs  lib.rs  native.rs
libjvm/src/jni/: Cargo.toml
libjvm/src/jni/src/: lib.rs
libjvm/src/jni/systest/: Cargo.toml  build.rs
libjvm/src/jni/systest/src/: main.rs
libjvm/src/vm/: Cargo.toml
libjvm/src/vm/src/native/: java_lang_ClassLoader.rs  java_security_AccessController.rs  sun_misc_URLClassPath.rs
libjvm/src/vm/src/native/common/: reflect.rs
libjvm/src/vm/src/oop/: reference.rs
libjvm/src/vm/src/runtime/thread/: condvar.rs  mutex.rs
libjvm/src/vm/src/util/: macros.rs
tools/javap/: Cargo.toml
