[package]
name = "libjvm"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2021"

[dependencies]
common = { path = "src/common" }

[lib]
name = "jvm"
crate-type = ["cdylib"]
path = "src/common"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [
    "src/class-parser",
    "src/class-verification",
    "src/classfile",
    "src/common",
    "src/jni",
    "src/jni/systest",
    "src/vm"
]